--- a/docker/apps/restic/restic.env
+++ b/docker/apps/restic/restic.env
@@ -7,6 +7,6 @@ BACKUP_CRON=0 */12 * * *
 RESTIC_HOSTNAME=
 RESTIC_RUN_ON_STARTUP=true
 # Prune envs
-RESTIC_PRUNE_CRON=0 11 4 * *
+RESTIC_PRUNE_CRON=0 0 9 * * *
 # Check envs
-RESTIC_CHECK_CRON=0 10 5 * *
+RESTIC_CHECK_CRON=0 15 15 * * *
