--- a/docker/apps/offen-docker-bkp/offen.backup.env
+++ b/docker/apps/offen-docker-bkp/offen.backup.env
@@ -2,3 +2,5 @@ OFS_BACKUP_SRC_APPS_FOLDER=/opt/xxx/volumes
 OFS_BACKUP_SRC_ETC_FOLDER=/opt/xxx-etc/
 OFS_BACKUP_DEST=/mnt/nfs/archives
 OFS_WEBDAV_DEST_HOST=127.0.0.1
+OFS_WEBDAV_USERNAME=test
+OFS_WEBDAV_PASSWORD=test
