--- a/docker/firezone/docker-compose.yml
+++ b/docker/firezone/docker-compose.yml
@@ -120,7 +120,7 @@ services:
       - "8102:8080"
     labels:
       - "docker-volume-backup.stop-during-backup=true"
-      - docker-volume-backup.archive-pre=/bin/sh -c 'pg_dump -U db_user db_firezone > /var/lib/firezone-backups/bck_db_firezone$(date +%Y%m%d-%H%M).sql'
+      - docker-volume-backup.archive-pre=/bin/sh -c 'pg_dump -U db_user db_firezone > /var/lib/firezone-backups/bck_db_firezone$(date "+%Y%m%d-%H%M").sql'
 
 # Postgres needs a named volume to prevent perms issues on non-linux platforms
 volumes:
