--- a/docker/firezone/docker-compose.yml
+++ b/docker/firezone/docker-compose.yml
@@ -100,6 +100,9 @@ services:
       POSTGRES_USER: ${DATABASE_USER}
       POSTGRES_PASSWORD: ${DATABASE_PASSWORD}
       TZ: "${TIME_ZONE}"
+    labels:
+      - "docker-volume-backup.stop-during-backup=true"
+      - docker-volume-backup.archive-pre=/bin/bash -c 'pg_dump -U db_user db_firezone > /var/lib/firezone-backups/bck_db_firezone$(date +%Y%m%d-%H%M).sql'
     networks:
       - firezone-network
     deploy:
@@ -120,7 +123,6 @@ services:
       - "8102:8080"
     labels:
       - "docker-volume-backup.stop-during-backup=true"
-      - docker-volume-backup.archive-pre=/bin/sh -c 'pg_dump -U db_user db_firezone > /var/lib/firezone-backups/bck_db_firezone$(date +%Y%m%d-%H%M).sql'
 
 # Postgres needs a named volume to prevent perms issues on non-linux platforms
 volumes:
