--- a/docker/password-manager/docker-compose.yml
+++ b/docker/password-manager/docker-compose.yml
@@ -8,8 +8,10 @@ secrets:
     file: /opt/data-etc/password-manager/smtp_user.secret.txt
   SMTP_PASSWORD:
     file: /opt/data-etc/password-manager/smtp_pwd.secret.txt
-  ADMIN_TOKEN:
-    file: /opt/data-etc/password-manager/admin_token.secret.txt
+  #ADMIN_TOKEN:
+    #file: /opt/data-etc/password-manager/admin_token.secret.txt
+  ADMIN_TOKEN_ARGON:
+    file: /opt/data-etc/password-manager/admin_token_argon.secret.txt
 
 services:
   vaultwarden:
@@ -35,7 +37,7 @@ services:
       DOMAIN: ${PWD_DOMAIN} #change this to your URL
       INVITATION_ORG_NAME: HomePwd-Mg #change this to your company name
       INVITATIONS_ALLOWED: false
-      ADMIN_TOKEN_FILE: /run/secrets/ADMIN_TOKEN #generate your own admin token
+      ADMIN_TOKEN_FILE: /run/secrets/ADMIN_TOKEN_ARGON #generate your own admin token
       SIGNUPS_ALLOWED: true
       SIGNUPS_VERIFY: true
       SIGNUPS_VERIFY_RESEND_TIME: 3600
@@ -48,7 +50,7 @@ services:
     secrets:
       - SMTP_USERNAME
       - SMTP_PASSWORD
-      - ADMIN_TOKEN
+      - ADMIN_TOKEN_ARGON
     labels:
       - "docker-volume-backup.stop-during-backup=true"
       - "com.centurylinklabs.watchtower.scope=toUpdateScope"
