--- a/docker/apps/immich/example.env
+++ b/docker/apps/immich/example.env
@@ -2,6 +2,7 @@
 
 # The location where your uploaded files are stored
 UPLOAD_LOCATION=./library
+EXTERNAL_PATH=/wherePhoto
 
 # The Immich version to use. You can pin this to a specific version like "v1.71.0"
 IMMICH_VERSION=release
@@ -14,5 +15,4 @@ DB_PASSWORD=postgres
 DB_HOSTNAME=immich_postgres
 DB_USERNAME=postgres
 DB_DATABASE_NAME=immich
-
 REDIS_HOSTNAME=immich_redis
