--- a/docker/apps/immich/docker-compose.yml
+++ b/docker/apps/immich/docker-compose.yml
@@ -12,7 +12,7 @@ name: immich
 services:
   immich-server:
     container_name: immich_server
-    image: ghcr.io/immich-app/immich-server:${IMMICH_VERSION:-release}
+    image: ghcr.io/immich-app/immich-server:release
     command: [ "start.sh", "immich" ]
     volumes:
       - /opt/data-docker/immich/upload:/usr/src/app/upload
@@ -51,7 +51,7 @@ services:
 
   immich-machine-learning:
     container_name: immich_machine_learning
-    image: ghcr.io/immich-app/immich-machine-learning:main
+    image: ghcr.io/immich-app/immich-machine-learning:release
     volumes:
       - /opt/data-docker/immich/machine-learning:/cache
     restart: always
