--- a/docker/apps/immich/docker-compose.yml
+++ b/docker/apps/immich/docker-compose.yml
@@ -14,6 +14,8 @@ services:
     container_name: immich_server
     image: ghcr.io/immich-app/immich-server:release
     command: [ "start.sh", "immich" ]
+    env_file:
+      - /opt/data-docker/immich/config/run.env
     volumes:
       - /opt/data-docker/immich/upload:/usr/src/app/upload
       - ${EXTERNAL_PATH}:/data
@@ -37,6 +39,8 @@ services:
        file: /opt/data-docker/immich/config/hwaccel.yml
        service: hwaccel
     command: [ "start.sh", "microservices" ]
+    env_file:
+      - /opt/data-docker/immich/config/run.env
     volumes:
       - /opt/data-docker/immich/upload:/usr/src/app/upload
       - ${EXTERNAL_PATH}:/data
@@ -56,6 +60,8 @@ services:
     image: ghcr.io/immich-app/immich-machine-learning:release
     volumes:
       - /opt/data-docker/immich/machine-learning:/cache
+    env_file:
+      - /opt/data-docker/immich/config/run.env
     restart: always
     security_opt:
       - no-new-privileges:true
