--- a/docker/uptime-kuma/docker-compose.yml
+++ b/docker/uptime-kuma/docker-compose.yml
@@ -4,8 +4,11 @@ services:
     image: louislam/uptime-kuma:latest
     container_name: uptime-kuma
     restart: unless-stopped
+    security_opt:
+      - no-new-privileges:true
     labels:
       - "com.centurylinklabs.watchtower.scope=toUpdateScope"
+      - "docker-volume-backup.stop-during-backup=true"
     ports:
       - "8080:3001"
     volumes:
